<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.EditUserActivity">

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/grey">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="16dp"
            android:text="@string/cancel"
            android:textColor="@color/primaryColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="16dp"
            android:text="@string/save"
            android:textColor="@color/primaryColor"
            android:textSize="14sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/rl_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="16dp"
        android:src="@drawable/baseline_account_circle_24"
        app:tint="@color/primaryColor" />

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_photo"
        android:background="@color/grey">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:text="@string/main_information"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl1">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/first_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:layout_toRightOf="@id/tv1"
            android:textColor="@color/black"
            android:hint="@string/first_name"
            android:inputType="text" />

        <View
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_first_name"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_first_name">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/last_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:layout_marginVertical="10dp"
            android:layout_toRightOf="@id/tv2"
            android:hint="@string/last_name"
            android:inputType="text" />

        <View
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_last_name"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_last_name"
        android:background="@color/grey">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:text="Sub Information"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl2">

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/email"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:layout_toRightOf="@id/tv3"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <View
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_email"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_email">

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/dob"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:layout_toRightOf="@id/tv4"
            android:hint="@string/dob"
            android:drawableRight="@drawable/baseline_date_range_24"
            android:inputType="text"
            android:focusableInTouchMode="false" />

        <View
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_dob"/>

    </RelativeLayout>


</RelativeLayout>